@@ -101,39 +101,6 @@ convert_bigint_matrix_to_mat_ZZ(const bigint_matrix & lidia_m) {
    return (ntl_m);
 }
 
-/* latte to NTL conversions */
-
-/* converts a latte listVector to a mat_ZZ */ 
-mat_ZZ
-convert_listVector_to_mat_ZZ(listVector *list) {
-   listVector *tmp_list = list;
-   int rows = tmp_list->first.length();
-   int cols = lengthListVector(tmp_list);
-   int cur_col = 0;
-   mat_ZZ m;
-                                                                                
-   m.SetDims(cols, rows);
-                                                                                
-   /* add columns as rows and then take the transpose */
-   while (tmp_list) {
-      m[cur_col] = copyVector(tmp_list->first, rows);
-      cur_col++;
-      tmp_list = tmp_list->rest;
-   }
-   return (transpose(m));
-}
-
-void
-print_debug_vector(const vec_ZZ & v) {
-   int len = v.length(); 
-
-   cout << "Begin vector: ["; 
-   for (int i = 0; i < len; i++) {
-      cout << v[i] << ","; 
-   }
-   cout << "]: End vector\n"; 
-}
-
 void
 print_debug_vector(const bigint * v, int len) {
    cout << "Begin vector: ["; 
@@ -159,18 +126,3 @@ print_debug_matrix(const bigint_matrix & m) {
    cout << ":End matrix\n"; 
 }
 
-void
-print_debug_matrix(const mat_ZZ & m) {
-   int rows = m.NumRows(); 
-   int cols = m.NumCols(); 
-
-   cout << "Begin matrix:\n"; 
-   for (int i = 0; i < rows; i++) {
-      cout << "["; 
-      for (int j = 0; j < cols; j++) {
-         cout << m[i][j] << ","; 
-      }
-      cout << "]\n"; 
-   }
-   cout << ":End matrix\n"; 
-}
