@@ -1,3 +1,5 @@
+// This is a -*- C++ -*- header file.
+
 #ifndef NTL_TO_LIDIA_H 
 #define NTL_TO_LIDIA_H 
 
@@ -22,19 +24,11 @@ copy_vec_ZZ_to_bigint_array(bigint *, const vec_ZZ &);
 mat_ZZ
 convert_bigint_matrix_to_mat_ZZ(const bigint_matrix &);
 
-/* latte to NTL conversions */
-mat_ZZ
-convert_listVector_to_mat_ZZ(listVector *);
-
 /* debug/diagnostic functions */
 void
 print_debug_matrix(const bigint_matrix &); 
 void
-print_debug_matrix(const mat_ZZ &);
-void
 print_debug_vector(const bigint *, int);
-void
-print_debug_vector(const vec_ZZ &);
 
 #endif
 
